Pasting a Grease Pencil stroke duplicates the paste to the next selected keyframe #106590

Closed
opened 2023-04-05 12:59:21 +02:00 by Matthew Gafford · 1 comment

System Information
Operating system: Win10
Graphics card: RTX3070 FE

Blender Version
Broken: 3.5 RC
Worked: N/A

Short description of error
In edit mode, when you're about to paste a stroke with CTRL-V, if you have a keyframe ahead of your current keyframe highlighted, it will paste a copy of your stroke to that keyframe as well (as if multiframe pasting). It only ever does this to the first keyframe ahead, no further ahead selected keyframes, or any keyframes selected before your current keyframe. See video for details.

Exact steps for others to reproduce the error

Video explanation: https://youtu.be/ae_e29Q1CDI

  1. Add a grease pencil object, make several keyframes.
  2. Draw a stroke and copy it with CTRL-C in edit mode.
  3. Select the next chronological keyframe on the timeline so it highlights orange
  4. When you paste the stroke with CTRL-V, it will have also pasted it onto that next keyframe.
**System Information** Operating system: Win10 Graphics card: RTX3070 FE **Blender Version** Broken: 3.5 RC Worked: N/A **Short description of error** In edit mode, when you're about to paste a stroke with CTRL-V, if you have a keyframe ahead of your current keyframe highlighted, it will paste a copy of your stroke to that keyframe as well (as if multiframe pasting). It only ever does this to the first keyframe ahead, no further ahead selected keyframes, or any keyframes selected before your current keyframe. See video for details. **Exact steps for others to reproduce the error** Video explanation: https://youtu.be/ae_e29Q1CDI 1. Add a grease pencil object, make several keyframes. 2. Draw a stroke and copy it with CTRL-C in edit mode. 3. Select the next chronological keyframe on the timeline so it highlights orange 4. When you paste the stroke with CTRL-V, it will have also pasted it onto that next keyframe.
Matthew Gafford added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-04-05 12:59:22 +02:00
Antonio Vazquez added the
Module
Grease Pencil
label 2023-04-06 12:22:45 +02:00
Antonio Vazquez self-assigned this 2023-04-06 12:22:54 +02:00
Antonio Vazquez added
Status
Confirmed
and removed
Status
Needs Triage
labels 2023-04-06 12:23:15 +02:00

Fixed with 65da3a3c5a

Fixed with 65da3a3c5ab27841c9509430bcac17e3bea1a044
Blender Bot added
Status
Archived
and removed
Status
Confirmed
labels 2023-04-06 15:34:29 +02:00
Antonio Vazquez added
Status
Resolved
and removed
Status
Archived
labels 2023-04-06 15:35:49 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#106590
No description provided.