Fix 106590: GPencil Paste stroke duplicates to the next selected

If the multiframe is not enabled, the loop must be not done or
the first selected frame is pasted too.

Now, the loop is only done in multiframe mode.